<resources>
    <string name="app_name">Unirem</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_email">Email</string>
    <string-array name="Privacy_type">
        <item>Private Event</item>
        <item>Public Event</item>

    </string-array>
</resources>
